# 25-26-idsw2-sdVC

./: CLAUDE.md  QUE_HACE.md  README.md  conversation-log.md
RUP/: PLAN-MEJORAS.md
images/: README.md
modelosUML/: README.md
scripts/: start.sh  (+3 more)
src/backend/: .env.example  .gitignore  README.md  pyproject.toml
src/backend/app/: dependencies.py  main.py
src/backend/app/core/: config.py  database.py  security.py
src/backend/app/models/: __init__.py  asignatura.py  asignatura_grado.py  asistencia.py  grado.py  matricula.py  profesor_asignatura.py  sesion_clase.py  solicitud_dispensa.py  usuario.py
src/backend/app/repositories/: asignatura_repository.py  asistencia_repository.py  grado_repository.py  matricula_repository.py  sesion_clase_repository.py  solicitud_dispensa_repository.py  usuario_repository.py
src/backend/app/routers/: alumnos.py  asignaciones.py  asignaturas.py  asistencias.py  auth.py  dispensas.py  grados.py  matriculas.py  profesores.py  sesiones_clase.py  usuarios.py
src/backend/app/schemas/: alumnos.py  asignaturas.py  asistencias.py  auth.py  dispensas.py  grados.py  matriculas.py  paginacion.py  sesiones_clase.py  usuarios.py
src/backend/app/services/: alumno_service.py  asignatura_service.py  asistencia_service.py  auth_service.py  generador_archivo_asistencias.py  generador_archivo_dispensas.py  grado_service.py  matricula_service.py  politica_acceso.py  sesion_clase_service.py  solicitud_dispensa_service.py  usuario_service.py  validador_archivo_listas_alumnos.py  validador_archivo_matriculas.py
src/backend/scripts/: seed.py
(+247 files in other folders)
